--- a/app/static/style.css
+++ b/app/static/style.css
@@ -40,6 +40,23 @@ p {
     line-height: 1.6;
 }
 
+.btn-primary {
+  width: 100%;
+  padding: 0.7em;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  font-size: 1em;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.btn-primary:hover {
+  background-color: #0056b3;
+}
+
+
 form {
     max-width: 400px;
     margin: 0 auto;
@@ -77,8 +94,55 @@ form {
     border-radius: 5px;
     font-size: 1em;
     cursor: pointer;
+    transition: background-color 0.3s ease;
   }
 
   form button:hover {
     background-color: #0056b3;
   }
+
+
+  .stock-card {
+    background-color: #f9f9f9;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    padding: 15px;
+    margin-top: 10px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  }
+
+  .stock-card h3 {
+    font-size: 1.5em;
+    margin-bottom: 10px;
+    color: #333;
+  }
+
+  .stock-card p {
+    margin: 5px 0;
+    font-size: 1em;
+    color: #555;
+  }
+
+  .stock-card p strong {
+    color: #333;
+  }
+
+  .flash-messages {
+    list-style: none;
+    padding: 0;
+  }
+
+  .flash-messages .success {
+    color: green;
+  }
+
+  .flash-messages .danger {
+    color: red;
+  }
+
+  .error {
+    color: red;
+    font-size: 0.9em;
+    margin-top: 0.5em;
+    display: block;
+}
