--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -21,6 +21,15 @@
       {% endif %}
     </nav>
     <div class="container">{% block content %}{% endblock %}</div>
+
+    {% with messages = get_flashed_messages(with_categories=true) %} {% if
+    messages %}
+    <ul class="flash-messages">
+      {% for category, message in messages %}
+      <li class="{{ category }}">{{ message }}</li>
+      {% endfor %}
+    </ul>
+    {% endif %} {% endwith %}
   </body>
 </html>
 
