--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -2,28 +2,46 @@
 
 {% extends "base.html" %} {% block content %}
 <h2>Sign Up</h2>
-<form id="signup-form" method="POST">
+<form method="POST">
   {{ form.hidden_tag() }}
   <div>
-    {{ form.username.label }} {{ form.username(size=32) }}
-    <span id="username-error" class="error"></span>
+    {{ form.username.label }} {{ form.username(size=32) }} {% for error in
+    form.username.errors %}
+    <span style="color: red">{{ error }}</span>
+    {% endfor %}
   </div>
   <div>
-    {{ form.email.label }} {{ form.email(size=32) }}
-    <span id="email-error" class="error"></span>
+    {{ form.email.label }} {{ form.email(size=32) }} {% for error in
+    form.email.errors %}
+    <span style="color: red">{{ error }}</span>
+    {% endfor %}
   </div>
   <div>
-    {{ form.password.label }} {{ form.password(size=32) }}
-    <span id="password-error" class="error"></span>
+    {{ form.password.label }} {{ form.password(size=32) }} {% for error in
+    form.password.errors %}
+    <span style="color: red">{{ error }}</span>
+    {% endfor %}
   </div>
   <div>
-    {{ form.confirm_password.label }} {{ form.confirm_password(size=32) }}
-    <span id="confirm-password-error" class="error"></span>
+    {{ form.confirm_password.label }} {{ form.confirm_password(size=32) }} {%
+    for error in form.confirm_password.errors %}
+    <span style="color: red">{{ error }}</span>
+    {% endfor %}
   </div>
   <div>
-    <button type="submit" class="btn-primary">Sign Up</button>
+    <button type="submit">Sign Up</button>
   </div>
 </form>
+
+<hr />
+<!-- <h3>Or Sign Up with Google</h3>
+<a href="{{ url_for('google.login') }}" class="google-login-btn">
+  <img
+    src="{{ url_for('static', filename='google-logo.png') }}"
+    alt="Google Logo"
+  />
+  Sign in with Google
+</a> -->
 
 <script>
   document
